--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bisual-eslint",
+  "name": "@bisual/eslint-config",
   "author": "Bisual",
   "version": "0.0.1",
   "description": "Bisual ESLint Config",
@@ -15,30 +15,20 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-next": "^14.1.2",
+    "confusing-browser-globals": "^1.0.11",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^12.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "prettier": "^3.2.5"
-  },
-  "peerDependencies": {
-    "eslint": ">=8",
-    "prettier": ">=3"
+    "eslint-plugin-tsdoc": "^0.2.17"
   },
   "eslintConfig": {
     "parserOptions": {
       "project": "./tsconfig.json"
     }
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   }
 }
