--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "standard": "^17.1.0"
+    "standard": "^17.1.0",
+    "ts-standard": "^12.0.2"
+  },
+  "ts-standard": {
+    "project": "./tsconfig.json"
   }
 }
