--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "eslint-plugin-tsdoc": "^0.2.17"
   },
   "eslintConfig": {
+    "extends": [
+      "standard"
+    ],
     "parserOptions": {
       "project": "./tsconfig.json"
     }
