--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
     "confusing-browser-globals": "^1.0.11",
-    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.0",
@@ -25,19 +23,11 @@
     "eslint-plugin-tsdoc": "^0.2.17"
   },
   "eslintConfig": {
-    "extends": [
-      "standard"
-    ],
     "parserOptions": {
       "project": "./tsconfig.json"
     }
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "standard": "^17.1.0",
-    "ts-standard": "^12.0.2"
-  },
-  "ts-standard": {
-    "project": "./tsconfig.json"
+    "eslint": "^8.57.0"
   }
 }
