--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@html-eslint/eslint-plugin": "^0.23.1",
+    "@html-eslint/parser": "^0.23.0",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "confusing-browser-globals": "^1.0.11",
