--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
       "project": "./tsconfig.json"
     }
   },
+  "peerDependencies": {
+    "eslint": ">=8.0.0",
+    "prettier": ">=3.0.0",
+    "typescript": ">=4"
+  },
   "devDependencies": {
     "eslint": "^8.57.0"
   }
