--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     }
   },
   "peerDependencies": {
-    "eslint": ">=8.0.0",
-    "prettier": ">=3.0.0",
-    "typescript": ">=4"
+    "eslint": ">=8.0.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0"
