add: monorepo eslint-config-frontend

--- a/packages/eslint-config-frontend/package.json
+++ b/packages/eslint-config-frontend/package.json
@@ -1,12 +1,10 @@
 {
+  "name": "@bisual/eslint-config-frontend",
   "author": "Bisual",
   "version": "0.0.1",
   "description": "Bisual ESLint Config",
   "main": "index.js",
   "keywords": [],
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
