--- a/packages/eslint-config-js-ts/package.json
+++ b/packages/eslint-config-js-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bisual/eslint-js-ts",
+  "name": "@bisual/eslint-config-js-ts",
   "author": "Bisual",
   "version": "0.1.0",
   "description": "Bisual ESLint configuration for Front-end projects",
