--- a/packages/eslint-config-js-ts/package.json
+++ b/packages/eslint-config-js-ts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bisual/eslint-config-js-ts",
   "author": "Bisual",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Bisual ESLint configuration for Front-end projects",
   "main": "index.js",
   "private": false,
@@ -24,6 +24,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@angular-eslint/template-parser": "^17.2.1",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "confusing-browser-globals": "^1.0.11",
@@ -35,6 +36,7 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-tsdoc": "^0.2.17"
   },
   "eslintConfig": {
