--- a/packages/eslint-config-js-ts/package.json
+++ b/packages/eslint-config-js-ts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bisual/eslint-config-js-ts",
   "author": "Bisual",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Bisual ESLint configuration for Front-end projects",
   "main": "index.js",
   "private": false,
@@ -24,6 +24,17 @@
   ],
   "license": "MIT",
   "dependencies": {
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
+  },
+  "peerDependencies": {
+    "eslint": ">=8.0.0",
+    "typescript": ">=4.0.0"
+  },
+  "devDependencies": {
     "@angular-eslint/template-parser": "^17.2.1",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
@@ -37,18 +48,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
-    "eslint-plugin-tsdoc": "^0.2.17"
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    }
-  },
-  "peerDependencies": {
-    "eslint": ">=8.0.0",
-    "typescript": ">=4.0.0"
-  },
-  "devDependencies": {
+    "eslint-plugin-tsdoc": "^0.2.17",
     "eslint": "^8.57.0"
   },
   "peerDependenciesMeta": {
