--- a/package.json
+++ b/package.json
@@ -1,18 +1,58 @@
 {
-  "name": "@bisual/eslint",
+  "name": "@bisual/eslint-config-js-ts",
   "author": "Bisual",
-  "version": "0.0.1",
-  "description": "Bisual ESLint Config",
-  "keywords": [],
-  "organization": "bisual",
-  "workspaces": [
-    "packages/*"
+  "version": "0.1.5",
+  "description": "Bisual ESLint configuration for JavaScript and TypeScript projects",
+  "main": "index.js",
+  "private": false,
+  "keywords": [
+    "airbnb",
+    "eslint",
+    "typescript",
+    "javascript"
   ],
+  "homepage": "https://github.com/bisual/bisual-eslint/tree/main",
+  "organization": "bisual",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bisual/bisual-eslint.git",
+    "directory": "packages/eslint-config-frontend"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
+  "dependencies": {
+    "@angular-eslint/template-parser": "^17.2.1",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "confusing-browser-globals": "^1.0.11",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "eslint-plugin-tsdoc": "^0.2.17"
+  },
   "devDependencies": {
     "eslint": "^8.57.0"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
+  },
+  "peerDependencies": {
+    "eslint": ">=8.0.0",
+    "typescript": ">=4.0.0"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   }
 }
