fix: TypeScript linting rules and update tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["public"],
   "compilerOptions": {
     "target": "es5",
     "module": "ESNext",
@@ -10,6 +12,8 @@
     "resolveJsonModule": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["dom", "dom.iterable", "esnext"]
   }
